--- a/arch/arm/configs/origen_defconfig
+++ b/arch/arm/configs/origen_defconfig
@@ -53,7 +53,6 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_DUMMY=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_MAX8997=y
-# CONFIG_HID_SUPPORT is not set
 CONFIG_FB=y
 CONFIG_FB_S3C=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -64,12 +63,15 @@ CONFIG_BACKLIGHT_GENERIC=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
+CONFIG_HID_SUPPORT=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB=y
 CONFIG_USB_DEVICEFS=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_S5P=y
 CONFIG_USB_STORAGE=y
+CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_OHCI_S5P=y
 CONFIG_MMC=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_SDHCI=y
