gator: Fix Makefile for DKMS
When building gator with DKMS then CONFIG_GATOR won't be defined (unless
the kernel was build with an in-tree copy of gator) this results in the
DKMS gator install failing.

Fix this by providing a default value for CONFIG_GATOR of 'm' so it is
built as a module.

Signed-off-by: Jon Medhurst <tixy@linaro.org>

--- a/drivers/gator/Makefile
+++ b/drivers/gator/Makefile
@@ -3,6 +3,7 @@ ifneq ($(KERNELRELEASE),)
 # Uncomment the following line to enable kernel stack unwinding within gator, or update gator_backtrace.c
 # EXTRA_CFLAGS +=	-DGATOR_KERNEL_STACK_UNWINDING
 
+CONFIG_GATOR ?= m
 obj-$(CONFIG_GATOR) := gator.o
 
 gator-y :=	gator_main.o \
